// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/ExpandView should match snapshot, DESKTOP on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationGlobalDefault"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="default"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="default"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="none"
              />
              <Describe
                memberNotifyLevel="none"
                section="desktop"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="desktop"
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      section="desktop"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, MARK_UNREAD on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationUnmute"
                name="channelNotificationMute"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="markUnread"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationMute"
                name="channelNotificationMute"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="markUnread"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="markUnread"
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      section="markUnread"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, PUSH on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationGlobalDefault"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="default"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="default"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelDesktopNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="none"
              />
              <Describe
                memberNotifyLevel="none"
                section="push"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="push"
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      section="push"
    />
  }
  updateSection={[MockFunction]}
/>
`;
